# graphene

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/algo/: bfs.rs  dfs.rs  dijkstra_shortest_paths.rs  mod.rs  retain.rs  search.rs  tarjan_scc.rs
src/algo/search/: bfs.rs  dfs.rs  mod.rs  search.rs  spfs.rs
src/common/: ensured.rs  mod.rs  vertex_map.rs
src/common/adjacency_list/: impl_base_graph.rs  impl_graph.rs  impl_weights.rs  mod.rs
src/core/: auto_graphs.rs  base_edge.rs  base_graph.rs  constrained_graph.rs  constrainer.rs  delegate_graph.rs  deref_graph.rs  directedness.rs  edge.rs  ensure.rs  exact_graph.rs  graph.rs  graph_wrapper.rs  insure.rs  maybe_owned.rs  mod.rs  reverse_graph.rs  trait_aliases.rs  unconstrainer.rs  weights.rs
src/core/constraint/: base_props.rs  connected.rs  custom_graph.rs  directed_constraint.rs  impl_constraints.rs  mod.rs  no_loops.rs  non_null.rs  reflexive.rs  subgraph.rs  undirected.rs  undirected_constraint.rs  unilateral.rs  unilaterally_connected.rs  unique.rs  unweighted.rs  weak.rs
src/core/property/: acyclic.rs  base_props.rs  connected.rs  directed_property.rs  directedness_ensurers.rs  directedness_insurers.rs  has_vertex.rs  impl_ensurer.rs  impl_insurer.rs  mod.rs  no_loops.rs  non_null.rs  reflexive.rs  rooted.rs  simple.rs  subgraph.rs  tree.rs  (+4 more)
src/graph/: base_edge.rs  base_graph.rs  graph.rs  mod.rs  mutable.rs
src/implementations/: mod.rs  usize_graph.rs
tests/: AdjListGraph_tests.rs  all_tests.rs  main_test.rs  test.rs
tests/algo/: bfs.rs  dfs.rs  dijkstra_shortest_paths.rs  mod.rs  search.rs  tarjan_scc.rs
tests/arbitraries/: arbitrary_graph_description.rs  arbitrary_usize_graph.rs  mod.rs  utilities.rs
tests/common/: ensured.rs  impl_graph.rs  mod.rs  utilities.rs
tests/core/: constrainer.rs  edge.rs  ensure.rs  insure.rs  maybe_owned.rs  mod.rs  utilities.rs
tests/implementations/: mod.rs
tests/mock_graph/: arbitraries.rs  mock_graph.rs  mod.rs  utilities.rs
tests/mock_graphs/: mock_base_graph.rs  mock_graph.rs  mod.rs  utilities.rs
(+98 files in other folders)
