[package]
name = "graphene"
version = "0.1.5"
authors = ["Emad Jacob Maroun <emoun.open@gmail.com>"]
edition = "2018"

description = "A general purpose, extensible Graph Theory data type and algorithm library for Rust."

license = "MIT"
readme = "README.md"

repository = "https://github.com/Emoun/graphene"

keywords = ["graph","algorithm"]
categories = ["data-structures","algorithms"]

[badges]

travis-ci = {repository = "Emoun/graphene"}

[dependencies]
delegate = "0.4.2"
tt-equal = "0.1"
tt-call = "1.0"
num-traits = "0.2"

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
quickcheck_macros = "0.9"
static_assertions = "1.1.0"
duplicate = "0.2.4"